--- a/_config.yml
+++ b/_config.yml
@@ -80,10 +80,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Sidebar Name"
+  name             : "Rick Barber"
   avatar           : "profile.png"
-  bio              : "Your biography for the left-hand sidebar"
-  location         : "Location"
+  bio              : "Bio"
+  location         : "Champaign, IL"
   employer         :
   googlescholar    : "https://scholar.google.com/citations?user=wKpbDDsAAAAJ&hl=en"
   email            :
