--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Rick Barber"
-  avatar           : "profile.png"
+  avatar           : "barber5.jpeg"
   bio              : "Researching privacy and the online advertising ecosystem"
   location         : "Champaign, IL"
   employer         :
