--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,8 +3,8 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Industry"
-    url: /industry/    
-
   - title: "Teaching"
     url: /teaching/    
+
+  - title: "CV"
+    url: /cv/
