--- a/_config.yml
+++ b/_config.yml
@@ -106,7 +106,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "rbrbr5"
+  twitter          : 
   vine             :
   weibo            :
   xing             :
