--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   location         : "Champaign, IL"
   employer         :
   googlescholar    : "https://scholar.google.com/citations?user=wKpbDDsAAAAJ&hl=en"
-  email            :
+  email            : "barber5@illinois.edu"
   uri              :
   bitbucket        :
   codepen          :
