--- a/_config.yml
+++ b/_config.yml
@@ -183,6 +183,9 @@ collections:
   talks:
     output: true
     permalink: /:collection/:path/
+  press:
+    output: true
+    permalink: /:collection/:path/
 
 
 # Defaults
