--- a/_config.yml
+++ b/_config.yml
@@ -82,11 +82,11 @@ analytics:
 author:
   name             : "Rick Barber"
   avatar           : "barber5.jpeg"
-  bio              : "Researching user-platform conflicts online"
+  bio              : "CTO at Addition"
   location         : "Champaign, IL"
   employer         :
   googlescholar    : "https://scholar.google.com/citations?user=wKpbDDsAAAAJ&hl=en"
-  email            : "barber5@illinois.edu"
+  email            : "rick@addition.ml"
   uri              :
   bitbucket        :
   codepen          :
